# example-fastapi-sqlachemy-pytest

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pythonapp.yml
src/example/: cli.py  main.py  routes.py  settings.py
src/example/crud/: __init__.py  item.py
src/example/db/: base.py  session.py
src/example/models/: item.py
src/example/routers/: item.py
src/example/schemas/: item.py
tests/: conftest.py  test_crud_item.py  test_routers_item.py
