[tool.poetry]
name = "example"
version = "0.1.0"
description = ""
authors = ["Tim Hughes"]

packages = [
    { include = "example", from = "src" },
]

[tool.poetry.scripts]
fastapi-example = 'example.cli:main'

[tool.poetry.dependencies]
python = "^3.7"
fastapi = "^0.65.2"
sqlalchemy = "^1.3.16"
PyJWT = "^1.7.1"
bcrypt = "^3.1.7"
python-multipart = "^0.0.5"
uvicorn = "^0.11.3"
passlib = "^1.7.2"

[tool.poetry.dev-dependencies]
pytest = "^5.2"
tox = "^3.14.6"
flake8 = "^3.7.9"
pylint = "^2.4.4"
pytest-cov = "^2.8.1"
pytest-xdist = "^1.31.0"
mypy = "^0.770"
requests = "^2.23.0"
autoflake = "^1.3.1"
black = "^19.10b0"


[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
